--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,5 +1,5 @@
 Installation instruction:
 
-* Copy annoying directory to your django project or put in on PYTHONPATH.
+* Copy annoying directory to your django project or put in PYTHONPATH.
 
 That's it.
