back author in setup.py and added to AUTHORS.txt, fixed pep in decorators.py

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,2 +1,3 @@
 Anderson <self.anderson@gmail.com>
 Stavros Korokithakis <stavros@korokithakis.net>
+Viktoria Galkina <viktoria.galkina93@gmail.com>
